--- a/style.css
+++ b/style.css
@@ -14,6 +14,14 @@ html, body{
 body{
     display: flex;
     flex-direction: column;
+    width: 90%;
+    margin: auto;
+}
+
+#view{
+    display: flex;
+    /* width: 70%; */
+    height: 80%;
 }
 
 #infos_game{
@@ -24,14 +32,17 @@ body{
 #game_container{
     display: flex;
     flex-direction: column;
+    flex: 3;
 }
 
 #screen{
-    min-width: 70%;
-    min-height: 70%;
+    width: 80%;
+    height: 70%;
     display: flex;
     align-self: center;
     border: blue solid 1px;
+    flex-wrap: wrap;
+    overflow: scroll;
 }
 #screen > * {
     margin: 5px;
@@ -41,6 +52,34 @@ body{
     text-align: center;
     font-size: 1rem;
     color: #555;
+}
+
+#configs{
+    display: flex;
+    flex-direction: column;
+}
+
+#parameters {
+    display: flex;
+    justify-content: space-around;
+}
+
+#parameters > div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+aside{
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    justify-content: left;
+}
+
+aside > table {
+    display: flex;
+    justify-content: left;
 }
 
 /* Reset de base */
